<resources>
    <string name="app_name" translatable="false">Citra</string>
    <string name="app_disclaimer">This software will run games for the Nintendo 3DS handheld game console. No game titles are included.\n\nBefore you can begin with emulating, please select a folder to store Citra\'s user data in.\n\nWhat\'s this:\n<a href='https://github.com/citra-emu/citra/wiki/Citra-Android-user-data-and-storage'>Wiki - Citra Android user data and storage</a></string>
    <string name="app_notification_channel_name" translatable="false">Citra</string>
    <string name="app_notification_channel_id" translatable="false">Citra</string>
    <string name="app_notification_channel_description">Citra 3DS emulator notifications</string>
    <string name="app_notification_running">Citra is Running</string>
    <string name="app_game_install_description">Next, you will need to select a Game Folder. Citra will display all of the 3DS ROMs inside of the selected folder in the app.\n\nCIA ROMs, updates and DLC will need to be installed separately by clicking on the folder icon and selecting Install CIA.</string>
    <string name="grid_menu_core_settings">Settings</string>
    <string name="home_options">Options</string>
    <string name="home_search">Search</string>
    <string name="home_games">Games</string>
    <string name="settings_description">Configure emulator settings</string>
    <string name="install_game_content">Install CIA file</string>
    <string name="install_game_content_description">Install games, updates or DLC</string>
    <string name="share_log">Share Log</string>
    <string name="share_log_description">Share Citra\'s log file to debug issues</string>
    <string name="gpu_driver_manager">GPU Driver Manager</string>
    <string name="install_gpu_driver">Install GPU driver</string>
    <string name="install_gpu_driver_description">Install alternative drivers for potentially better performance or accuracy</string>
    <string name="driver_already_installed">Driver already installed</string>
    <string name="custom_driver_not_supported">Custom drivers not supported</string>
    <string name="custom_driver_not_supported_description">Custom driver loading isn\'t currently supported for this device.\nCheck this option again in the future to see if support was added!</string>
    <string name="share_log_not_found">No log file found</string>
    <string name="select_games_folder">Select Games Folder</string>
    <string name="select_games_folder_description">Allows Citra to populate the games list</string>
    <string name="about">About</string>
    <string name="citra_description">An open-source 3DS emulator</string>
    <string name="about_description">Build version, credits, and more</string>
    <string name="games_dir_selected">Games directory selected</string>
    <string name="select_citra_user_folder_home_description">Changes the files that Citra uses to load games</string>
    <string name="theme_and_color_description">Modify the look of the app</string>
    <string name="install_cia_title">Install CIA</string>
    <string name="select_gpu_driver">Select GPU driver</string>
    <string name="select_gpu_driver_title">Would you like to replace your current GPU driver?</string>
    <string name="select_gpu_driver_install">Install</string>
    <string name="select_gpu_driver_default">Default</string>
    <string name="select_gpu_driver_install_success">Installed %s</string>
    <string name="select_gpu_driver_use_default">Using default GPU driver</string>
    <string name="select_gpu_driver_error">Invalid driver selected, using system default!</string>
    <string name="system_gpu_driver">System GPU driver</string>
    <string name="installing_driver">Installing driver…</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="contributors">Contributors</string>
    <string name="contributors_description">Made with \u2764 from the Citra team</string>
    <string name="contributors_link">https://github.com/citra-emu/citra/graphs/contributors</string>
    <string name="licenses_description">Projects that make Citra for Android possible</string>
    <string name="build">Build</string>
    <string name="licenses">Licenses</string>
    <string name="support_link">https://discord.gg/FAXfZV9</string>
    <string name="website_link">https://citra-emu.org/</string>
    <string name="github_link">https://github.com/citra-emu</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_description">Learn how to setup &lt;b>Citra&lt;/b> and jump into emulation.</string>
    <string name="get_started">Get started</string>
    <string name="step_complete">Complete!</string>
    <string name="games">Games</string>
    <string name="games_description">Select your &lt;b>Games&lt;/b> folder with the button below.</string>
    <string name="done">Done</string>
    <string name="done_description">You\'re all set.\nEnjoy your games!</string>
    <string name="text_continue">Continue</string>
    <string name="add_games">Add Games</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_description">Grant the notification permission with the button below.</string>
    <string name="give_permission">Grant permission</string>
    <string name="notification_warning">Skip granting the notification permission?</string>
    <string name="notification_warning_description">Citra won\'t be able to notify you of important information.</string>
    <string name="camera_permission">Camera</string>
    <string name="camera_permission_description">Grant the camera permission below to emulate the 3DS camera.</string>
    <string name="microphone_permission">Microphone</string>
    <string name="microphone_permission_description">Grant the microphone permission below to emulate the 3DS microphone.</string>
    <string name="permission_denied">Permission denied</string>
    <string name="add_games_warning">Skip selecting games folder?</string>
    <string name="add_games_warning_description">Games won\'t be displayed in the Games list if a folder isn\'t selected.</string>
    <string name="add_games_warning_help">https://citra-emu.org/wiki/dumping-game-cartridges/</string>
    <string name="warning_help">Help</string>
    <string name="warning_skip">Skip</string>
    <string name="warning_cancel">Cancel</string>
    <string name="select_citra_user_folder">Select User Folder</string>
    <string name="select_citra_user_folder_description"><![CDATA[Select your <a href="https://github.com/citra-emu/citra/wiki/Citra-Android-user-data-and-storage">user data</a> directory with the button below.]]></string>
    <string name="select">Select</string>
    <string name="cannot_skip">You can\'t skip this step</string>
    <string name="cannot_skip_directory_description">This step is required to allow Citra to work. Please select a directory and then you can continue.</string>
    <string name="cannot_skip_directory_help">https://github.com/citra-emu/citra/wiki/Citra-Android-user-data-and-storage</string>
    <string name="search_and_filter_games">Search and Filter Games</string>
    <string name="home_search_games">Search Games</string>
    <string name="search_recently_played">Recently Played</string>
    <string name="search_recently_added">Recently Added</string>
    <string name="search_installed">Installed</string>
    <string name="controller_circlepad">Circle Pad</string>
    <string name="controller_c">C-Stick</string>
    <string name="controller_hotkeys">Hotkeys</string>
    <string name="controller_triggers">Triggers</string>
    <string name="controller_trigger">Trigger</string>
    <string name="controller_dpad">D-Pad</string>
    <string name="controller_dpad_axis">D-Pad (Axis)</string>
    <string name="controller_dpad_axis_description">Some controllers will not be able to map their dpad as an axis. In that case, use the D-Pad (buttons) section below instead.</string>
    <string name="controller_dpad_button">D-Pad (Buttons)</string>
    <string name="controller_dpad_button_description">Only map these buttons if the D-Pad (Axis) settings above do not work with your controller.</string>
    <string name="controller_axis_vertical">Up/Down Axis</string>
    <string name="controller_axis_horizontal">Left/Right Axis</string>
    <string name="direction_up">Up</string>
    <string name="direction_down">Down</string>
    <string name="direction_left">Left</string>
    <string name="direction_right">Right</string>
    <string name="input_dialog_title">Bind %1$s %2$s</string>
    <string name="input_dialog_description">Press or move an input.</string>
    <string name="input_binding">Input Binding</string>
    <string name="input_binding_description">Press or move an input to bind it to %1$s.</string>
    <string name="input_binding_description_vertical_axis">Move your joystick up or down.</string>
    <string name="input_binding_description_horizontal_axis">Move your joystick left or right.</string>
    <string name="button_a" translatable="false">A</string>
    <string name="button_b" translatable="false">B</string>
    <string name="button_select" translatable="false">SELECT</string>
    <string name="button_start" translatable="false">START</string>
    <string name="button_home">HOME</string>
    <string name="button_x" translatable="false">X</string>
    <string name="button_y" translatable="false">Y</string>
    <string name="button_l" translatable="false">L</string>
    <string name="start">Start</string>
    <string name="clear">Clear</string>
    <string name="select_game_folder">Select Game Folder</string>
    <string name="preferences_settings">Settings</string>
    <string name="emulation_save_state">Save State</string>
    <string name="emulation_load_state">Load State</string>
    <string name="emulation_show_fps">Show FPS</string>
    <string name="emulation_overlay_options">Overlay Options</string>
    <string name="emulation_configure_controls">Configure Controls</string>
    <string name="emulation_edit_layout">Edit Layout</string>
    <string name="emulation_toggle_controls">Toggle Controls</string>
    <string name="emulation_control_scale">Adjust Scale</string>
    <string name="emulation_control_joystick_rel_center">Relative Stick Center</string>
    <string name="emulation_control_dpad_slide_enable">D-Pad Sliding</string>
    <string name="emulation_open_settings">Open Settings</string>
    <string name="emulation_open_cheats">Open Cheats</string>
    <string name="emulation_switch_screen_layout">Landscape Screen Layout</string>
    <string name="emulation_screen_layout_landscape">Default</string>
    <string name="emulation_screen_layout_portrait">Portrait</string>
    <string name="emulation_screen_layout_single">Single Screen</string>
    <string name="emulation_screen_layout_sidebyside">Side by Side Screens</string>
    <string name="emulation_screen_layout_hybrid">Hybrid Screens</string>
    <string name="emulation_swap_screens">Swap Screens</string>
    <string name="emulation_touch_overlay_reset">Reset Overlay</string>
    <string name="emulation_show_overlay">Show Overlay</string>
    <string name="emulation_close_game">Close Game</string>
    <string name="menu_emulation_amiibo">Amiibo</string>
    <string name="menu_emulation_amiibo_load">Load</string>
    <string name="menu_emulation_amiibo_remove">Remove</string>
    <string name="pause_emulation">Pause Emulation</string>
    <string name="lock_drawer">Lock Drawer</string>
    <string name="move_data">Move Data</string>
    <string name="savestates">Save States</string>
    <string name="fatal_error">Fatal Error</string>
    <string name="cheats">Cheats</string>
    <string name="cheats_name">Name</string>
    <string name="cheats_notes">Notes</string>
    <string name="cheats_code">Code</string>
    <string name="cheats_edit">Edit</string>
    <string name="cheats_delete">Delete</string>
</resources>