<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="org.citra.citra_emu.activities.EmulationActivity">

    <item
        android:id="@+id/menu_emulation_save_state"
        android:title="@string/emulation_save_state">
        <menu/>
    </item>

    <item
        android:id="@+id/menu_emulation_load_state"
        android:title="@string/emulation_load_state">
        <menu/>
    </item>

    <item
        android:id="@+id/menu_emulation_configure_controls"
        android:title="@string/emulation_configure_controls">
        <menu>
            <item
                android:id="@+id/menu_emulation_edit_layout"
                android:title="@string/emulation_edit_layout" />

            <item
                android:id="@+id/menu_emulation_toggle_controls"
                android:title="@string/emulation_toggle_controls" />

            <item
                android:id="@+id/menu_emulation_adjust_scale"
                android:title="@string/emulation_control_scale" />

            <group android:checkableBehavior="all">
                <item
                    android:id="@+id/menu_emulation_joystick_rel_center"
                    android:checkable="true"
                    android:title="@string/emulation_control_joystick_rel_center"/>
                <item
                    android:id="@+id/menu_emulation_dpad_slide_enable"
                    android:checkable="true"
                    android:title="@string/emulation_control_dpad_slide_enable" />
            </group>

            <item
                android:id="@+id/menu_emulation_reset_overlay"
                android:title="@string/emulation_touch_overlay_reset" />
        </menu>
    </item>

    <item
        android:id="@+id/menu_emulation_amiibo"
        android:title="@string/menu_emulation_amiibo">
        <menu>
            <item
                android:id="@+id/menu_emulation_amiibo_load"
                android:title="@string/menu_emulation_amiibo_load" />

            <item
                android:id="@+id/menu_emulation_amiibo_remove"
                android:title="@string/menu_emulation_amiibo_remove" />
        </menu>
    </item>

    <item
        android:id="@+id/menu_emulation_switch_screen_layout"
        app:showAsAction="never"
        android:title="@string/emulation_switch_screen_layout">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_screen_layout_landscape"
                    android:title="@string/emulation_screen_layout_landscape" />

                <item
                    android:id="@+id/menu_screen_layout_portrait"
                    android:title="@string/emulation_screen_layout_portrait" />

                <item
                    android:id="@+id/menu_screen_layout_single"
                    android:title="@string/emulation_screen_layout_single" />

                <item
                    android:id="@+id/menu_screen_layout_sidebyside"
                    android:title="@string/emulation_screen_layout_sidebyside" />

                <item
                    android:id="@+id/menu_screen_layout_hybrid"
                    android:title="@string/emulation_screen_layout_hybrid" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/menu_emulation_swap_screens"
        app:showAsAction="never"
        android:title="@string/emulation_swap_screens"
        android:checkable="true" />

    <item
        android:id="@+id/menu_emulation_show_fps"
        app:showAsAction="never"
        android:title="@string/emulation_show_fps"
        android:checkable="true" />

    <item
        android:id="@+id/menu_emulation_show_overlay"
        app:showAsAction="never"
        android:title="@string/emulation_show_overlay"
        android:checkable="true" />

    <item
        android:id="@+id/menu_emulation_open_cheats"
        app:showAsAction="never"
        android:title="@string/emulation_open_cheats" />

    <item
        android:id="@+id/menu_emulation_open_settings"
        app:showAsAction="never"
        android:title="@string/emulation_open_settings" />

    <item
        android:id="@+id/menu_emulation_close_game"
        app:showAsAction="never"
        android:title="@string/emulation_close_game" />

</menu>
