<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_emulation_pause"
        android:icon="@drawable/ic_pause"
        android:title="@string/pause_emulation" />

    <item
        android:id="@+id/menu_emulation_savestates"
        android:icon="@drawable/ic_save"
        android:title="@string/savestates"
        android:visible="false" />

    <item
        android:id="@+id/menu_overlay_options"
        android:icon="@drawable/ic_controller"
        android:title="@string/emulation_overlay_options" />

    <item
        android:id="@+id/menu_amiibo"
        android:icon="@drawable/ic_nfc"
        android:title="@string/menu_emulation_amiibo" />

    <item
        android:id="@+id/menu_landscape_screen_layout"
        android:icon="@drawable/ic_fit_screen"
        android:title="@string/emulation_switch_screen_layout" />

    <item
        android:id="@+id/menu_swap_screens"
        android:icon="@drawable/ic_splitscreen"
        android:title="@string/emulation_swap_screens" />

    <item
        android:id="@+id/menu_lock_drawer"
        android:icon="@drawable/ic_unlocked"
        android:title="@string/lock_drawer" />

    <item
        android:id="@+id/menu_cheats"
        android:icon="@drawable/ic_code"
        android:title="@string/cheats" />

    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/preferences_settings" />

    <item
        android:id="@+id/menu_exit"
        android:icon="@drawable/ic_exit"
        android:title="@string/emulation_close_game" />

</menu>
