<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_show_overlay"
        android:title="@string/emulation_show_overlay"
        android:checkable="true" />

    <item
        android:id="@+id/menu_show_fps"
        android:title="@string/emulation_show_fps"
        android:checkable="true" />

    <item
        android:id="@+id/menu_emulation_edit_layout"
        android:title="@string/emulation_edit_layout" />

    <item
        android:id="@+id/menu_emulation_toggle_controls"
        android:title="@string/emulation_toggle_controls" />

    <item
        android:id="@+id/menu_emulation_adjust_scale"
        android:title="@string/emulation_control_scale" />

    <item
        android:id="@+id/menu_emulation_adjust_opacity"
        android:title="@string/emulation_control_opacity" />

    <group android:checkableBehavior="all">
        <item
            android:id="@+id/menu_emulation_joystick_rel_center"
            android:checkable="true"
            android:title="@string/emulation_control_joystick_rel_center"/>
        <item
            android:id="@+id/menu_emulation_dpad_slide_enable"
            android:checkable="true"
            android:title="@string/emulation_control_dpad_slide_enable" />
    </group>

    <item
        android:id="@+id/menu_emulation_reset_overlay"
        android:title="@string/emulation_touch_overlay_reset" />

</menu>
