<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/button_premium"
        android:icon="@drawable/ic_heart"
        android:title="@string/premium_text"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/button_file_menu"
        android:icon="@drawable/ic_folder"
        android:title="@string/select_game_folder"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/button_select_root"
                android:icon="@drawable/ic_folder"
                android:title="@string/select_citra_user_folder"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/button_add_directory"
                android:icon="@drawable/ic_folder"
                android:title="@string/select_game_folder"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/button_install_cia"
                android:icon="@drawable/ic_install"
                android:title="@string/install_cia_title"
                app:showAsAction="ifRoom" />
        </menu>
    </item>
    <item
        android:id="@+id/menu_settings_core"
        android:icon="@drawable/ic_settings"
        android:title="@string/grid_menu_core_settings"
        app:showAsAction="ifRoom" />

</menu>
